--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,262 +1,268 @@
-:root {
-  --main-color: rgb(71, 0, 151);
-  --main-color-light: rgb(155, 128, 187);
-  --main-color-dark: rgb(40, 0, 87);
-  --main-color-dark-hovered: rgb(60, 0, 128);
-  --secondary-color: rgb(231, 208, 0);
+:root{
+    --main-color: rgb(71, 0, 151);
+    --main-color-dark: rgb(40, 0, 87);
+    --main-color-dark-hovered: rgb(60, 0, 128);
+    --main-color-light: rgb(155, 128, 187);
+    --secondary-color: rgb(231, 208, 0);
 }
 
-body {
-  margin: 0px;
-  background-color: rgb(219, 188, 255);
+body{
+    margin: 0;
+    background-color: rgb(219, 188, 255);
 }
 
-header {
-  flex-wrap: wrap;
-  width: 100vw;
-  display: flex;
-  align-items: center;
-  background-color: var(--main-color);
+header{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 100vw;
+    background-color: var(--main-color);
 }
 
-#search-form {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: flex-start;
-  flex-grow: 1;
+#search-form{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-grow: 1;
+    flex-wrap: wrap;
 }
 
-h1 {
-  text-align: left;
-  color: white;
-  font-size: 2.5rem;
-  margin: 0px;
-  margin-right: 10px;
-  font-family: 'Roboto Condensed', sans-serif;
-  padding: 10px;
-  white-space: nowrap;
+h1{
+    margin: 0;
+    margin-right: 10px;
+    padding: 10px;
+    color: white;
+    text-align: left;
+    white-space: nowrap;
+    font-size: 2.5rem;
+    font-family: 'Roboto Condensed', sans-serif;
 }
 
-h1::before {
-  font-family: 'Font Awesome 5 Free';
-  font-weight: 900;
-  content: '\f0e9';
-  color: var(--secondary-color);
-  margin-right: 5px;
+h1::before{
+    margin-right: 5px;
+    color: var(--secondary-color);
+    content: '\f0e9';
+    font-weight: 900;
+    font-family: 'Font Awesome 5 Free';
 }
 
-header input {
-  font-size: 1.7rem;
-  color: white;
-  border: none;
-  background-color: var(--main-color-light);
-  border-radius: 5px;
-  padding: 4px;
-  max-width: 300px;
-  flex-grow: 1;
-  font-family: 'Roboto Condensed', sans-serif;
+header input{
+    flex-grow: 1;
+    padding: 4px;
+    max-width: 300px;
+    border: none;
+    border-radius: 5px;
+    background-color: var(--main-color-light);
+    color: white;
+    font-size: 1.7rem;
+    font-family: 'Roboto Condensed', sans-serif;
 }
 
-header input::placeholder {
-  color: rgb(255, 255, 255);
-  opacity: 0.5;
+header input::placeholder{
+    color: rgb(255, 255, 255);
+    opacity: 0.5;
 }
 
-header input:focus {
-  border: none;
-  outline-width: 0;
+header input:focus{
+    outline-width: 0;
+    border: none;
 }
 
-header button {
-  color: white;
-  font-family: 'Roboto Condensed', sans-serif;
-  font-size: 1.2rem;
-  font-weight: 700;
+header button{
+    color: white;
+    font-weight: 700;
+    font-size: 1.2rem;
+    font-family: 'Roboto Condensed', sans-serif;
 }
 
-header #search-by-text {
-  border: 1px solid var(--main-color-dark);
-  background-color: var(--main-color-dark);
-  padding: 8px;
-  margin: 0 10px;
-  cursor: pointer;
-  border-radius: 5px;
+header #search-by-text{
+    margin: 0 10px;
+    padding: 8px;
+    border: 1px solid var(--main-color-dark);
+    border-radius: 5px;
+    background-color: var(--main-color-dark);
+    cursor: pointer;
 }
 
-header #search-by-text:hover {
-  border-color: var(--main-color-dark-hovered);
-  background-color: var(--main-color-dark-hovered);
+header #search-by-text:hover{
+    border-color: var(--main-color-dark-hovered);
+    background-color: var(--main-color-dark-hovered);
 }
 
-header #search-by-text:active {
-  border: 1px solid white;
+header #search-by-text:active{
+    border: 1px solid white;
 }
 
-header #search-by-location {
-  background-color: transparent;
-  border: none;
-  text-decoration-line: underline;
-  cursor: pointer;
+header #search-by-location{
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+
+    text-decoration-line: underline;
 }
 
-header #search-by-location::before {
-  display: inline-block;
-  font-family: 'Font Awesome 5 Free';
-  font-weight: 900;
-  content: '\f3c5';
-  color: var(--secondary-color);
-  margin-right: 5px;
+header #search-by-location::before{
+    display: inline-block;
+    margin-right: 5px;
+    color: var(--secondary-color);
+    content: '\f3c5';
+    font-weight: 900;
+    font-family: 'Font Awesome 5 Free';
 }
 
-#powered-by {
-  text-align: right;
-  font-family: 'Roboto Condensed', sans-serif;
-  font-weight: 900;
-  color: white;
-  margin: 0 20px;
+#powered-by{
+    margin: 0 20px;
+    color: white;
+    text-align: right;
+    font-weight: 900;
+    font-family: 'Roboto Condensed', sans-serif;
 }
 
-#status {
-  color: green;
+#status{
+    color: green;
 }
 
-#status.waiting {
-  color: yellow;
+#status.waiting{
+    color: yellow;
 }
 
-#status.invalid {
-  color: red;
+#status.invalid{
+    color: red;
 }
 
-#content {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  /* height: 100vh; */
+#content{
+    display: flex;
+    justify-content: center;
+    align-items: stretch;
+    flex-wrap: wrap;
+    /* display: grid;
+
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); */
+    /* height: 100vh; */
 }
 
-.city-card {
-  position: relative;
-  margin: 4vw 20px;
-  width: 250px;
-  padding: 25px 20px;
-  background-color: var(--main-color);
-  border-radius: 10px;
-  display: flex;
-  flex-direction: column;
-  max-width: 300px;
-}
-
-.name {
-  color: white;
-  width: 100%;
-  text-align: center;
-  font-family: 'Roboto Condensed', sans-serif;
-  font-size: 2rem;
-  font-weight: 900;
-  padding-top: 10px;
-  color: white;
-}
-
-.coords {
-  color: white;
-  width: 100%;
-  text-align: center;
-  font-family: 'Roboto Condensed', sans-serif;
-  font-size: 0.85rem;
-  font-weight: 300;
-}
-
-.weather-icon {
-  color: var(--main-color-light);
-  text-align: center;
-  margin-bottom: 3vh;
-}
-
-.temperature {
-  color: white;
-  /* width: 100%; */
-  text-align: center;
-  font-family: 'Roboto Condensed', sans-serif;
-  font-size: 3rem;
-  font-weight: 1000;
-  margin: 3vh;
-}
-
-.weather-desc {
-  color: white;
-  width: 100%;
-  text-align: center;
-  font-family: 'Roboto Condensed', sans-serif;
-  font-size: 1.5rem;
-  font-weight: 300;
-}
-
-.weather-humidity {
-  color: white;
-  width: 100%;
-  text-align: center;
-  font-family: 'Roboto Condensed', sans-serif;
-  font-size: 1rem;
-  font-weight: 300;
-}
-
-.city-card:hover .delete-card-icon {
-  visibility: visible;
-}
-
-.delete-card-icon {
-  visibility: hidden;
-  position: absolute;
-  top: 1.5vh;
-  color: var(--secondary-color);
-  right: 1.5vh;
-}
-
-@media screen and (max-width: 1200px) {
-  #powered-by {
-    display: none;
-  }
-}
-@media screen and (max-width: 900px) {
-  header {
+.city-card{
+    position: relative;
+    display: flex;
     flex-direction: column;
-  }
+    margin: 4vw 20px;
+    padding: 25px 20px;
+    max-width: 300px;
+    width: 250px;
+    border-radius: 10px;
+    background-color: var(--main-color);
+}
 
-  h1 {
-    padding-top: 20px;
-    /* text-align: center;
+.name{
+    padding-top: 10px;
+    width: 100%;
+    color: white;
+    color: white;
+    text-align: center;
+    font-weight: 900;
+    font-size: 2rem;
+    font-family: 'Roboto Condensed', sans-serif;
+}
+
+.coords{
+    width: 100%;
+    color: white;
+    text-align: center;
+    font-weight: 300;
+    font-size: 0.85rem;
+    font-family: 'Roboto Condensed', sans-serif;
+}
+
+.weather-icon{
+    margin-bottom: 3vh;
+    color: var(--main-color-light);
+    text-align: center;
+}
+
+.temperature{
+    margin: 3vh;
+    color: white;
+    /* width: 100%; */
+    text-align: center;
+    font-weight: 1000;
+    font-size: 3rem;
+    font-family: 'Roboto Condensed', sans-serif;
+}
+
+.weather-desc{
+    width: 100%;
+    color: white;
+    text-align: center;
+    font-weight: 300;
+    font-size: 1.5rem;
+    font-family: 'Roboto Condensed', sans-serif;
+}
+
+.weather-humidity{
+    width: 100%;
+    color: white;
+    text-align: center;
+    font-weight: 300;
+    font-size: 1rem;
+    font-family: 'Roboto Condensed', sans-serif;
+}
+
+.city-card:hover .delete-card-icon{
+    visibility: visible;
+}
+
+.delete-card-icon{
+    position: absolute;
+    top: 1.5vh;
+    right: 1.5vh;
+    visibility: hidden;
+    color: var(--secondary-color);
+}
+
+@media screen and (max-width: 1200px){
+    #powered-by{
+        display: none;
+    }
+}
+@media screen and (max-width: 900px){
+    header{
+        flex-direction: column;
+    }
+
+    h1{
+        padding-top: 20px;
+        /* text-align: center;
     align-self: center;
     justify-self: center; */
-  }
-  #search-form {
-    /* justify-content: center; */
-    width: 100%;
-    padding: 10px 0;
-    /* padding-bottom: 20px; */
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    /* align-self: stretch; */
-    grid-row-gap: 15px;
-  }
-  #search-form input {
-    grid-column: 1 / 3;
-    max-width: unset;
-    margin: 0 5vw;
-    /* width: 90vw; */
-  }
-  header button {
-    /* font-size: 0.9rem; */
-    white-space: nowrap;
-    /* margin: 0 5vw; */
-  }
+    }
+    #search-form{
+        /* padding-bottom: 20px; */
+        display: grid;
+        padding: 10px 0;
+        /* justify-content: center; */
+        width: 100%;
+        /* align-self: stretch; */
 
-  header #search-by-text {
-    margin-left: 5vw;
-  }
-  header #search-by-location {
-    margin-right: 5vw;
-  }
+        grid-row-gap: 15px;
+        grid-template-columns: 1fr 1fr;
+    }
+    #search-form input{
+        margin: 0 5vw;
+        max-width: unset;
+
+        grid-column: 1 / 3;
+        /* width: 90vw; */
+    }
+    header button{
+        /* font-size: 0.9rem; */
+        white-space: nowrap;
+        /* margin: 0 5vw; */
+    }
+
+    header #search-by-text{
+        margin-left: 5vw;
+    }
+    header #search-by-location{
+        margin-right: 5vw;
+    }
 }
